--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         // Change this if you used something else in Indify (e.g., dob + 80 years)
         end: "2078-03-30",
         // true => shows Remaining % instead of Lived %
-        showRemainingPercent: true
+        showRemainingPercent: false
       },
 
       weather: {
