--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <style>
     :root{
       --bg0:#0b0d0c;
-      --bg1:#121615;
-      --card:#141a18;
-      --muted:#9aa7a3;
       --text:#e8f2ee;
+      --muted:#9aa7a3;
       --accent:#a8f0b3;
       --accent2:#78d98a;
       --stroke: rgba(168,240,179,.7);
       --shadow: 0 10px 30px rgba(0,0,0,.45);
       --radius: 18px;
+
+      --panel-bg: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+      --panel-border: 1px solid rgba(255,255,255,.06);
+      --card-bg: rgba(0,0,0,.25);
+      --card-border: 1px solid rgba(255,255,255,.06);
     }
 
     *{ box-sizing:border-box; }
@@ -101,7 +104,7 @@
 
     .w-right{
       text-align:left;
-      min-width: 220px;
+      min-width: 260px;
       display:flex;
       flex-direction:column;
       gap: 2px;
@@ -121,9 +124,9 @@
     }
     .w-meta{
       margin-top: 2px;
-      font-size: 11px;
-      color: rgba(154,167,163,.95);
-      font-weight: 700;
+      display:flex;
+      gap: 8px;
+      flex-wrap: wrap;
     }
 
     /* ===== Main layout ===== */
@@ -139,8 +142,8 @@
     }
 
     .panel{
-      background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
-      border: 1px solid rgba(255,255,255,.06);
+      background: var(--panel-bg);
+      border: var(--panel-border);
       box-shadow: var(--shadow);
       border-radius: var(--radius);
       padding: 18px;
@@ -161,8 +164,8 @@
     }
 
     .cd-card{
-      background: rgba(0,0,0,.25);
-      border: 1px solid rgba(255,255,255,.06);
+      background: var(--card-bg);
+      border: var(--card-border);
       border-radius: 16px;
       padding: 16px 16px 14px;
     }
@@ -311,7 +314,7 @@
 
     .tag{
       display:inline-block;
-      padding: 2px 8px;
+      padding: 2px 10px;
       border-radius: 999px;
       border: 1px solid rgba(255,255,255,.08);
       background: rgba(255,255,255,.03);
@@ -319,7 +322,167 @@
       font-weight: 900;
       letter-spacing:.2px;
       color: #cfe0da;
-      margin-left: 8px;
+    }
+
+    /* ===== Goals Board ===== */
+    .section{
+      margin-top: 18px;
+    }
+
+    .section-title{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 14px;
+      margin: 18px 0 10px;
+      padding-top: 14px;
+      border-top: 1px solid rgba(255,255,255,.10);
+    }
+
+    .section-title h2{
+      margin:0;
+      font-size: 18px;
+      font-weight: 950;
+      letter-spacing:.2px;
+      display:flex;
+      align-items:center;
+      gap: 10px;
+    }
+
+    .section-title .meta{
+      color: rgba(154,167,163,.95);
+      font-size: 12px;
+      font-weight: 750;
+    }
+
+    .goals-board{
+      display:grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 14px;
+    }
+
+    @media (max-width: 980px){
+      .goals-board{ grid-template-columns: repeat(2, 1fr); }
+    }
+    @media (max-width: 520px){
+      .goals-board{ grid-template-columns: 1fr; }
+    }
+
+    .g-col{
+      background: rgba(0,0,0,.16);
+      border: 1px solid rgba(255,255,255,.06);
+      border-radius: 16px;
+      padding: 12px;
+      box-shadow: 0 8px 22px rgba(0,0,0,.25);
+      min-height: 180px;
+    }
+
+    .g-colhead{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    .g-pill{
+      display:inline-flex;
+      align-items:center;
+      gap: 8px;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.08);
+      background: rgba(255,255,255,.03);
+      font-size: 12px;
+      font-weight: 900;
+      letter-spacing:.2px;
+      color: rgba(232,242,238,.92);
+      text-transform: none;
+    }
+
+    .g-count{
+      color: rgba(154,167,163,.95);
+      font-size: 12px;
+      font-weight: 850;
+    }
+
+    .g-list{
+      display:flex;
+      flex-direction:column;
+      gap: 10px;
+    }
+
+    .g-card{
+      background: rgba(255,255,255,.03);
+      border: 1px solid rgba(255,255,255,.06);
+      border-radius: 14px;
+      padding: 10px 10px 9px;
+    }
+
+    .g-row{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap: 10px;
+    }
+
+    .g-title{
+      font-size: 13px;
+      font-weight: 900;
+      line-height: 1.25;
+      color: rgba(232,242,238,.92);
+      display:flex;
+      gap: 8px;
+      align-items:flex-start;
+    }
+
+    .g-emoji{ width: 18px; text-align:center; }
+
+    .g-meta{
+      color: rgba(154,167,163,.95);
+      font-size: 12px;
+      font-weight: 850;
+      white-space: nowrap;
+      margin-top: 1px;
+    }
+
+    .g-progress{
+      margin-top: 8px;
+      height: 8px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.06);
+      border: 1px solid rgba(255,255,255,.06);
+      overflow:hidden;
+    }
+
+    .g-progress > div{
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(90deg, rgba(168,240,179,.92), rgba(120,217,138,.92));
+      box-shadow: 0 0 18px rgba(168,240,179,.12);
+    }
+
+    .g-foot{
+      margin-top: 10px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 10px;
+      color: rgba(154,167,163,.95);
+      font-size: 11px;
+      font-weight: 800;
+    }
+
+    .error{
+      margin-top: 10px;
+      padding: 10px 12px;
+      border-radius: 14px;
+      border: 1px solid rgba(255,80,80,.25);
+      background: rgba(255,80,80,.06);
+      color: rgba(232,242,238,.90);
+      font-size: 12px;
+      font-weight: 750;
+      line-height: 1.35;
     }
   </style>
 </head>
@@ -388,6 +551,21 @@
         </div>
       </div>
     </div>
+
+    <!-- Goals section -->
+    <div class="section">
+      <div class="section-title">
+        <h2>↗ <span id="goalsTitle">Short Term Goals</span></h2>
+        <div class="meta" id="goalsMeta">Loading goals…</div>
+      </div>
+
+      <div id="goalsBoard" class="goals-board"></div>
+      <div id="goalsError" class="error" style="display:none;"></div>
+
+      <div class="hint">
+        Edit goals in <b>goals.json</b> (repo root). Commit + push to update Notion.
+      </div>
+    </div>
   </div>
 
   <script>
@@ -408,18 +586,23 @@
 
       life: {
         dob: "1998-03-30",
-        // Change this if you used something else in Indify (e.g., dob + 80 years)
         end: "2078-03-30",
-        // true => shows Remaining % instead of Lived %
+        // true => shows Remaining %, false => shows Lived %
         showRemainingPercent: false
       },
 
       weather: {
         cityLabel: "San Antonio",
-        // San Antonio, TX
         latitude: 29.4241,
         longitude: -98.4936,
         refreshMinutes: 15
+      },
+
+      goals: {
+        // File in repo root:
+        url: "./goals.json",
+        // Goals don't need frequent refresh; this just helps if browser caches.
+        refreshMinutes: 10
       }
     };
 
@@ -431,7 +614,6 @@
     }
 
     function parseLocalDate(input){
-      // YYYY-MM-DD becomes local midnight (good for “countdown to day”)
       if (/^\d{4}-\d{2}-\d{2}$/.test(input)) {
         const [y,m,day] = input.split("-").map(Number);
         return new Date(y, m-1, day, 0, 0, 0, 0);
@@ -568,7 +750,6 @@
 
     // ---------- Weather (Open-Meteo, no key) ----------
     function weatherCodeToText(code){
-      // Open-Meteo WMO codes (common groupings)
       if (code === 0) return "clear sky";
       if (code === 1) return "mainly clear";
       if (code === 2) return "partly cloudy";
@@ -588,7 +769,6 @@
     }
 
     function iconSVG(kind){
-      // Minimal inline SVG icons in your accent vibe
       const stroke = "rgba(232,242,238,.85)";
       const fill = "rgba(232,242,238,.18)";
       const accent = "rgba(168,240,179,.85)";
@@ -628,7 +808,6 @@
           </svg>`;
       }
 
-      // default
       return iconSVG("cloud");
     }
 
@@ -678,10 +857,142 @@
         const now = new Date();
         updatedEl.textContent = `Updated: ${now.toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" })}`;
       } catch (e) {
-        // Fail gracefully
         descEl.textContent = "weather unavailable";
         iconEl.innerHTML = iconSVG("cloud");
         updatedEl.textContent = "Updated: —";
+      }
+    }
+
+    // ---------- Goals (goals.json) ----------
+    function clampPct(p){
+      const n = Number(p);
+      if (!Number.isFinite(n)) return 0;
+      return Math.max(0, Math.min(100, n));
+    }
+
+    function renderGoals(boardData){
+      const titleEl = document.getElementById("goalsTitle");
+      const metaEl = document.getElementById("goalsMeta");
+      const boardEl = document.getElementById("goalsBoard");
+      const errEl = document.getElementById("goalsError");
+
+      errEl.style.display = "none";
+      errEl.textContent = "";
+
+      titleEl.textContent = boardData.title || "Short Term Goals";
+      boardEl.innerHTML = "";
+
+      const cols = Array.isArray(boardData.columns) ? boardData.columns : [];
+      let totalItems = 0;
+
+      cols.forEach(col => {
+        const items = Array.isArray(col.items) ? col.items : [];
+        totalItems += items.length;
+
+        const colEl = document.createElement("div");
+        colEl.className = "g-col";
+
+        const head = document.createElement("div");
+        head.className = "g-colhead";
+
+        const pill = document.createElement("div");
+        pill.className = "g-pill";
+        pill.textContent = col.name || "Column";
+
+        const count = document.createElement("div");
+        count.className = "g-count";
+        count.textContent = String(items.length);
+
+        head.appendChild(pill);
+        head.appendChild(count);
+
+        const list = document.createElement("div");
+        list.className = "g-list";
+
+        items.forEach(it => {
+          const card = document.createElement("div");
+          card.className = "g-card";
+
+          const row = document.createElement("div");
+          row.className = "g-row";
+
+          const title = document.createElement("div");
+          title.className = "g-title";
+
+          const emoji = document.createElement("div");
+          emoji.className = "g-emoji";
+          emoji.textContent = it.emoji || "•";
+
+          const text = document.createElement("div");
+          text.textContent = it.title || "Untitled";
+
+          title.appendChild(emoji);
+          title.appendChild(text);
+
+          const meta = document.createElement("div");
+          meta.className = "g-meta";
+          meta.textContent = it.meta || "";
+
+          row.appendChild(title);
+          if (it.meta) row.appendChild(meta);
+
+          const progressWrap = document.createElement("div");
+          progressWrap.className = "g-progress";
+
+          const bar = document.createElement("div");
+          const pct = clampPct(it.progress);
+          bar.style.width = `${pct}%`;
+
+          progressWrap.appendChild(bar);
+
+          const foot = document.createElement("div");
+          foot.className = "g-foot";
+          const pctEl = document.createElement("div");
+          pctEl.textContent = `${pct.toFixed(0)}%`;
+          const spacer = document.createElement("div");
+          spacer.textContent = "";
+          foot.appendChild(spacer);
+          foot.appendChild(pctEl);
+
+          card.appendChild(row);
+          card.appendChild(progressWrap);
+          card.appendChild(foot);
+
+          list.appendChild(card);
+        });
+
+        colEl.appendChild(head);
+        colEl.appendChild(list);
+        boardEl.appendChild(colEl);
+      });
+
+      metaEl.textContent = `${totalItems} total`;
+    }
+
+    async function refreshGoals(){
+      const metaEl = document.getElementById("goalsMeta");
+      const errEl = document.getElementById("goalsError");
+
+      try {
+        // Cache-bust so updates show quickly
+        const bust = `cb=${Date.now()}`;
+        const url = CONFIG.goals.url.includes("?")
+          ? `${CONFIG.goals.url}&${bust}`
+          : `${CONFIG.goals.url}?${bust}`;
+
+        const res = await fetch(url, { cache: "no-store" });
+        if (!res.ok) throw new Error(`goals.json fetch failed: ${res.status}`);
+        const data = await res.json();
+        renderGoals(data);
+
+        const now = new Date();
+        metaEl.textContent = `${metaEl.textContent} • updated ${now.toLocaleTimeString([], { hour:"2-digit", minute:"2-digit" })}`;
+      } catch (e) {
+        errEl.style.display = "block";
+        errEl.textContent =
+          "Could not load goals.json. Make sure goals.json is in the repo root and GitHub Pages has redeployed.\n" +
+          "Tip: open your site directly (not inside Notion) to confirm it loads first.";
+        metaEl.textContent = "Goals unavailable";
       }
     }
 
@@ -703,12 +1014,16 @@
 
     tick();
     refreshWeather();
+    refreshGoals();
 
     // Countdown/Life refresh once per minute
     setInterval(tick, 60 * 1000);
 
-    // Weather refresh every N minutes
+    // Weather refresh
     setInterval(refreshWeather, CONFIG.weather.refreshMinutes * 60 * 1000);
+
+    // Goals refresh (helps if caching happens)
+    setInterval(refreshGoals, CONFIG.goals.refreshMinutes * 60 * 1000);
   </script>
 </body>
 </html>
